@@ -1,3 +1,8 @@
+2013-11-22  Hans-Peter Nilsson  <hp@axis.com>
+
+	* config/cris/cris.c (cris_atomic_align_for_mode): New function.
+	(TARGET_ATOMIC_ALIGN_FOR_MODE): Define.
+
 2013-11-22  Yuri Rumyantsev  <ysrumyan@gmail.com>
 
 	* config/i386/i386.c(processor_alias_table): Enable PTA_AES,
